POWR-3040 - fix video player widths and alignment (#85)
* POWR-3040 incremental commit so I can switch branches

* POWR-3055 initial updates to full, medium, and narrow responsive image styles

* POWR-3055 added padding for left or right aligned images with caption (using figure tag)

* POWR-3055 tweaked medium and narrow image widths, updated narrow so that it's not full width at smaller sizes

* POWR-3055 style tweaks

* POWR-3040 got embedded video markup and styles working well.

* POWR-3040 more tweaks to get the width and alignment just right.

* POWR-3040 rebuild css

* POWR-3040 reconciled image styles from powr-3055 and tweaked

* POWR-3040 incremental commit so I can switch branches. View mode is working well; video edit mode layout is messed up in CKEditor.

* POWR-3040 image embed working well for view and edit modes; video embed still has problems

* POWR-3040 removed unsuccessful styles, was not able to fix edit mode video styles

* POWR-3040 adjusted css selector so padding top only applies to videos at max width 767

* POWR-3040 adjusted css selector so padding top only applies to videos at max width 767

* POWR-3040 fixed narrow image style width

* POWR-3040 removed medium view mode for video

* POWR-3040 make sure narrow image is centered at small viewport sizes, remove left margin on align right images at small viewport size

--- a/web/themes/custom/cloudy2/assets/css/cloudy2.style.css
+++ b/web/themes/custom/cloudy2/assets/css/cloudy2.style.css
@@ -9398,21 +9398,6 @@ a.text-dark:hover, a.text-dark:focus {
   background: #f8f9fa;
 }
 
-.embed-image.align-left {
-  margin-right: 1rem;
-}
-
-.embed-image.align-right, .embed-video.align-right {
-  margin-left: 1rem;
-  margin-right: 0;
-}
-
-.embed-image.align-center, .embed-video.align-center {
-  width: fit-content;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-}
-
 .embed-document {
   margin-bottom: 1rem;
 }
@@ -9421,13 +9406,156 @@ a.text-dark:hover, a.text-dark:focus {
   font-size: 90%;
 }
 
+.embed-image.align-center {
+  width: fit-content;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+}
+
+.field .embed-video.embedded-full, .field .embed-video.embedded-medium,
+figure .embed-video.embedded-full, figure .embed-video.embedded-medium {
+  position: relative;
+}
+
+.field .embed-video.embedded-full, figure .embed-video.embedded-full {
+  width: 100% !important;
+  padding-top: 56.25%;
+}
+
+figure.embedded-full, .embedded-full {
+  width: 100% !important;
+}
+
+figure.embedded-medium, .embedded-medium {
+  width: 50% !important;
+}
+
+figure.embedded-medium .embedded-medium {
+  width: 100% !important;
+}
+
+figure.embedded-narrow, .embedded-narrow {
+  width: 25% !important;
+}
+
+figure.embedded-narrow .embedded-narrow {
+  width: 100% !important;
+}
+
+.embed-image img {
+  width: 100% !important;
+}
+
+figure.align-center.embedded-medium {
+  display: block;
+}
+
+.align-left {
+  margin-right: 1rem;
+  margin-left: 0;
+}
+
+.align-right {
+  margin-left: 1rem;
+  margin-right: 0;
+}
+
+.field .embed-video.embedded-full .field {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.field .embed-video.embedded-full .field__item, .embed-video.embedded-full iframe {
+  height: 100%;
+  width: 100%;
+}
+
+figure.caption {
+  display: block;
+}
+
+figure.caption .embed-video {
+  margin-bottom: 0 !important;
+}
+
+figure.caption figcaption {
+  display: inline-block;
+}
+
+drupal-media[data-view-mode=full] {
+  width: 100%;
+  padding-top: 0;
+}
+
+drupal-media[data-view-mode=medium] {
+  width: 50% !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+drupal-media[data-view-mode=narrow] {
+  width: 25% !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+drupal-media[data-view-mode=narrow] .embedded-narrow {
+  width: 100% !important;
+}
+
+drupal-media[data-view-mode=medium] .embedded-medium {
+  width: 100% !important;
+}
+
+drupal-media[data-align=right] {
+  float: right;
+  margin-left: 1rem;
+}
+
+drupal-media[data-align=left] {
+  float: left;
+  margin-right: 1rem;
+}
+
 @media (max-width: 767px) {
-  .embed-image.align-right, .embed-video.align-right {
+  .embed-image.align-right {
     margin-left: 0;
   }
-  .embed-image.align-center, .embed-video.align-center {
+  figure.embedded-medium, div.embedded-medium {
+    width: 100% !important;
+  }
+}
+
+/* At sizes below 560, center the Narrow image, don't make it 100% width because there's a good chance
+   it's a logo or other image that shouldn't be enlarged or may not have the pixels to enlarge cleanly. */
+@media (max-width: 559px) {
+  .embed-image.embedded-narrow {
+    display: block;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    float: none;
+  }
+  figure.embedded-narrow .embedded-narrow {
+    width: 25% !important;
+  }
+  .embed-image.embedded-narrow img {
+    width: 208px;
+  }
+  .caption.caption-drupal-media {
+    width: 100% !important;
+    float: none;
     margin-left: 0;
+  }
+  .embedded-medium, .embedded-narrow {
     margin-right: 0;
+    float: none;
+    width: 25% !important;
+    display: block;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
   }
 }
 
