--- a/web/themes/custom/cloudy2/src/sass/media/_embedded.scss
+++ b/web/themes/custom/cloudy2/src/sass/media/_embedded.scss
@@ -1,18 +1,3 @@
-.embed-image.align-left {
-  margin-right: $spacer;
-}
-
-.embed-image.align-right, .embed-video.align-right {
-  margin-left: $spacer;
-  margin-right: 0;
-}
-
-.embed-image.align-center, .embed-video.align-center {
-  width: fit-content;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-}
-
 .embed-document {
   margin-bottom: $spacer;
 }
@@ -21,12 +6,155 @@
   font-size: 90%;
 }
 
+.embed-image.align-center {
+  width: fit-content;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+}
+
+.field .embed-video.embedded-full, .field .embed-video.embedded-medium,
+figure .embed-video.embedded-full, figure .embed-video.embedded-medium {
+  position: relative;
+}
+
+.field .embed-video.embedded-full, figure .embed-video.embedded-full {
+  width: 100% !important;
+  padding-top: 56.25%;
+}
+
+figure.embedded-full, .embedded-full {
+  width: 100% !important;
+}
+
+figure.embedded-medium, .embedded-medium {
+  width: 50% !important;
+}
+
+figure.embedded-medium .embedded-medium {
+  width: 100% !important;
+}
+
+figure.embedded-narrow, .embedded-narrow {
+  width: 25% !important;
+}
+
+figure.embedded-narrow .embedded-narrow {
+  width: 100% !important;
+}
+
+.embed-image img {
+  width: 100% !important;
+}
+
+figure.align-center.embedded-medium {
+  display: block;
+}
+
+.align-left {
+  margin-right: $spacer;
+  margin-left: 0;
+}
+
+.align-right {
+  margin-left: $spacer;
+  margin-right: 0;
+}
+
+.field .embed-video.embedded-full .field {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.field .embed-video.embedded-full .field__item, .embed-video.embedded-full iframe {
+  height: 100%;
+  width: 100%;
+}
+
+figure.caption {
+  display: block;
+}
+
+figure.caption .embed-video {
+  margin-bottom: 0 !important;
+}
+
+figure.caption figcaption {
+  display: inline-block;
+}
+
+drupal-media[data-view-mode=full] {
+  width: 100%;
+  padding-top: 0;
+}
+
+drupal-media[data-view-mode=medium] {
+  width: 50% !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+drupal-media[data-view-mode=narrow] {
+  width: 25% !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+drupal-media[data-view-mode=narrow] .embedded-narrow {
+  width: 100% !important;
+}
+
+drupal-media[data-view-mode=medium] .embedded-medium {
+  width: 100% !important;
+}
+
+drupal-media[data-align=right] {
+  float: right;
+  margin-left: $spacer;
+}
+
+drupal-media[data-align=left] {
+  float: left;
+  margin-right: $spacer;
+}
+
 @media (max-width: 767px) {
-  .embed-image.align-right, .embed-video.align-right {
+  .embed-image.align-right {
     margin-left: 0;
   }
-  .embed-image.align-center, .embed-video.align-center {
-    margin-left: 0; 
+  figure.embedded-medium, div.embedded-medium {
+    width: 100% !important;
+  }
+}
+
+/* At sizes below 560, center the Narrow image, don't make it 100% width because there's a good chance
+   it's a logo or other image that shouldn't be enlarged or may not have the pixels to enlarge cleanly. */
+@media (max-width: 559px) {
+  .embed-image.embedded-narrow {
+    display: block;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    float: none;
+  }
+  figure.embedded-narrow .embedded-narrow {
+    width: 25% !important;
+  }
+  .embed-image.embedded-narrow img {
+    width: 208px;
+  }
+  .caption.caption-drupal-media {
+    width: 100% !important;
+    float: none;
+    margin-left: 0;
+  }
+  .embedded-medium, .embedded-narrow {
     margin-right: 0;
+    float: none;
+    width: 25% !important;
+    display: block;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
   }
 }
